[package]
name = "dashu"
version = "0.4.0"
edition = "2021"
authors = ["Jacob Zhong <cmpute@gmail.com>"]
description = "A library set of big numbers"
keywords = ["mathematics", "bignum"]
categories = ["mathematics", "no-std"]
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
    "base",
    "benchmark",
    "integer",
    "float",
    "macros",
    "rational"
]
default-members = ["base", "integer", "float", "rational", "macros"]

[features]
default = ["std", "num-order"]
std = ["dashu-base/std", "dashu-int/std", "dashu-float/std", "dashu-ratio/std"]

# stable features
serde = ["dashu-int/serde", "dashu-float/serde", "dashu-ratio/serde"]
num-order = ["dashu-int/num-order", "dashu-float/num-order", "dashu-ratio/num-order"]
zeroize = ["dashu-int/zeroize", "dashu-float/zeroize", "dashu-ratio/zeroize"]

# unstable features
rand = ["dashu-int/rand", "dashu-float/rand", "dashu-ratio/rand"]
rand_v08 = ["dashu-int/rand_v08", "dashu-float/rand_v08", "dashu-ratio/rand_v08"]
num-traits = ["dashu-int/num-traits", "dashu-float/num-traits", "dashu-ratio/num-traits"]
num-traits_v02 = ["dashu-int/num-traits_v02", "dashu-float/num-traits_v02", "dashu-ratio/num-traits_v02"]

# this feature enables all related features related to decimal crates.
decimal-extras = ["dashu-float/postgres-types", "dashu-float/diesel"]

[dependencies]
# all crates under dashu will have the same major version,
# but the minor and patch versions can be different.
dashu-base = { version = "0.4.0", default-features = false, path = "./base" }
dashu-int = { version = "0.4.0", default-features = false, path = "./integer" }
dashu-float = { version = "0.4.0", default-features = false, path = "./float" }
dashu-ratio = { version = "0.4.0", default-features = false, path = "./rational", features = ['dashu-float'] }
dashu-macros = { version = "0.4.0", default-features = false, path = "./macros" }
