[package]
name = "dashu"
version = "0.4.4"
edition = "2021"
authors = ["Jacob Zhong <cmpute@gmail.com>"]
description = "A library set of big numbers"
keywords = ["bignum", "numerics", "mathematics", "math"]
categories = ["mathematics", "no-std", "parsing", "value-formatting"]
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu"
readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["/src"]
rust-version = "1.68"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
    "base",
    "integer",
    "float",
    "macros",
    "python",
    "rational",
    "complex",
]
exclude = ["benchmark", "fuzz"]
default-members = ["base", "integer", "float", "rational", "complex", "macros"]

[features]
default = ["std", "num-order"]
std = ["dashu-base/std", "dashu-int/std", "dashu-float/std", "dashu-ratio/std", "dashu-cmplx/std"]

# stable features
serde = ["dashu-int/serde", "dashu-float/serde", "dashu-ratio/serde", "dashu-cmplx/serde"]
num-order = ["dashu-int/num-order", "dashu-float/num-order", "dashu-ratio/num-order", "dashu-cmplx/num-order"]
tuning = ["dashu-int/tuning"]
zeroize = ["dashu-int/zeroize", "dashu-float/zeroize", "dashu-ratio/zeroize", "dashu-cmplx/zeroize"]

# unstable features
rand = ["dashu-int/rand", "dashu-float/rand", "dashu-ratio/rand", "dashu-cmplx/rand"]
rand_v08 = ["dashu-int/rand_v08", "dashu-float/rand_v08", "dashu-ratio/rand_v08"]
rand_v09 = ["dashu-int/rand_v09", "dashu-float/rand_v09", "dashu-ratio/rand_v09", "dashu-cmplx/rand_v09"]
rand_v010 = ["dashu-int/rand_v010", "dashu-float/rand_v010", "dashu-ratio/rand_v010"]
num-traits = ["dashu-int/num-traits", "dashu-float/num-traits", "dashu-ratio/num-traits", "dashu-cmplx/num-traits"]
num-traits_v02 = ["dashu-int/num-traits_v02", "dashu-float/num-traits_v02", "dashu-ratio/num-traits_v02", "dashu-cmplx/num-traits_v02"]

# this feature enables all related features related to decimal crates.
decimal-extras = ["dashu-float/postgres-types", "dashu-float/diesel"]

[dependencies]
rustversion = "1.0"

# all crates under dashu will have the same major version,
# but the minor and patch versions can be different.
dashu-base = { version = "0.4.3", default-features = false, path = "./base" }
dashu-int = { version = "0.4.3", default-features = false, path = "./integer" }
dashu-float = { version = "0.4.5", default-features = false, path = "./float" }
dashu-ratio = { version = "0.4.3", default-features = false, path = "./rational", features = ['dashu-float'] }
dashu-cmplx = { version = "0.5.0", default-features = false, path = "./complex" }
dashu-macros = { version = "0.4.2", default-features = false, path = "./macros" }
