[package]
name = "benchmark"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ibig = "0.3.4"
num-bigint = "0.4.3"
ramp = { version = "0.7.0", optional = true }
rug = "1.13.0"
rust-gmp = "0.5.0"
malachite-base = "0.2.2"
malachite-nz = "0.2.2"
dashu-int = { path = "../integer" }
