[package]
name = "benchmark"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ibig = "0.3.6"
num-bigint = "0.4.4"
ramp = { version = "0.7.0", optional = true }
rug = { version = "1.22.0", optional = true }
rust-gmp = { version = "0.5.0", optional = true }
malachite-base = "0.4.2"
malachite-nz = "0.4.2"
dashu-int = { path = "../integer" }

[features]
gmp = ["rug", "rust-gmp"]
