[package]
name = "benchmark"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

# meta crates
dashu = { path = ".." }
malachite = "0.4.2"
num = "0.4.1"
rug = { version = "1.22.0", optional = true }
rust-gmp = { version = "0.5.0", optional = true }

# integer crates
ibig = "0.3.6"
ramp = { version = "0.7.0", optional = true }

# float crates
bigdecimal = "0.4.2"

[features]
gmp = ["rug", "rust-gmp"]
