[package]
name = "dashu-float"
version = "0.3.0"
authors = ["Jacob Zhong <cmpute@gmail.com>"]
edition = "2021"
description = "A big float library supporting arbitrary precision, arbitrary base and arbitrary rounding mode"
keywords = ["mathematics", "numerics", "floating-point", "decimal", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu-float"
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "rand", "num-traits"]
std = ["dashu-base/std", "dashu-int/std"]
rand = ["dep:rand", "dashu-int/rand"]
num-traits = ["dep:num-traits", "dashu-int/num-traits"]
serde = ["dep:serde", "dashu-int/serde"]

[dependencies.static_assertions]
version = "1.1"

[dependencies.dashu-base]
path = "../base"
version = "0.3.0"
default-features = false

[dependencies.dashu-int]
path = "../integer"
version = "0.3.0"
default-features = false

[dependencies.num-traits]
optional = true
version = "0.2.15"
default-features = false

[dependencies.rand]
optional = true
version = "0.8.3"
default-features = false

[dependencies.serde]
optional = true
version = "1.0.130"
default-features = false

[dev-dependencies.rand]
version = "0.8.3"

[dev-dependencies.postcard]
version = "1.0.2"
features = ["alloc"]

[dev-dependencies.serde_test]
version = "1.0.130"

[dev-dependencies.serde_json]
version = "1.0"

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]
