[package]
name = "dashu-float"
version = "0.3.0"
authors = ["Jacob Zhong <cmpute@gmail.com>"]
edition = "2021"
description = "A big float library supporting arbitrary precision, arbitrary base and arbitrary rounding mode"
keywords = ["mathematics", "numerics", "floating-point", "decimal", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu-float"
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "rand", "num-traits"]
std = ["dashu-base/std", "dashu-int/std"]
rand = ["dep:rand", "dashu-int/rand"]
num-traits = ["dep:num-traits", "dashu-int/num-traits"]
serde = ["dep:serde", "dashu-int/serde"]
zeroize = ["dep:zeroize", "dashu-int/zeroize"]

[dependencies]
dashu-base = { version = "0.3.0", default-features = false, path = "../base" }
dashu-int = { version = "0.3.0", default-features = false, path = "../integer" }
static_assertions = { version = "1.1"}

rand = { optional = true, version = "0.8.3", default-features = false }
num-traits = { optional = true, version = "0.2.15", default-features = false }
serde = { optional = true, version = "1.0.130", default-features = false }
zeroize = { optional = true, version = "1.5.7", default-features = false }
diesel1 = { optional = true, version = "1.4.0", package = "diesel", default-features = false, features = ["postgres"]}
diesel2 = { optional = true, version = "2.0.0", package = "diesel", default-features = false, features = ["postgres_backend"]}
postgres-types = { optional = true, version = "0.2.4", default-features = false }

[dev-dependencies]
rand = { version = "0.8.3" }
postcard = { version = "1.0.2", features = ["alloc"] }
serde_test = { version = "1.0.130" }
serde_json = { version = "1.0" }

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]
