[package]
name = "fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
dashu-float = { path = "../float" }
dashu-cmplx = { path = "../complex" }
dashu-ratio = { path = "../rational" }
dashu-int = { path = "../integer", features = ["rand_v010"] }
dashu-base = { path = "../base" }
rand = "0.10.1"
rug = "1.24"
proptest = "~1.7"

# This package is excluded from the root workspace; declare its own workspace so it builds
# standalone (`cargo test --manifest-path fuzz/Cargo.toml`).
[workspace]
