[package]
name = "fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
dashu = { path = ".." }
rand = "0.10.1"
rug = "1.24"
proptest = "~1.7"

# This package is excluded from the root workspace; declare its own workspace so it builds
# standalone (`cargo test --manifest-path fuzz/Cargo.toml`).
[workspace]
