[package]
name = "dashu-int"
version = "0.3.0"
authors = ["Jacob Zhong <cmpute@gmail.com>", "Tomek Czajka <tczajka@gmail.com>"]
edition = "2021"
description = "A big integer library with good performance"
keywords = ["mathematics", "numerics", "integer", "bigint", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu-int"
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "rand", "num-traits", "num-order"]
std = ["dashu-base/std"]

[dependencies.dashu-base]
path = "../base"
version = "0.3.0"
default-features = false

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.static_assertions]
version = "1.1"

[dependencies.num-traits]
optional = true
version = "0.2.14"
default-features = false

[dependencies.num-integer]
optional = true
version = "0.1.45"
default-features = false

[dependencies.num-order]
optional = true
version = "1.0.4"
default-features = false

[dependencies.rand]
optional = true
version = "0.8.3"
default-features = false

[dependencies.serde]
optional = true
version = "1.0.130"
default-features = false

[dependencies.zeroize]
optional = true
version = "1.5.7"
default-features = false

[dev-dependencies.criterion]
version = "0.4.0"
features = ["html_reports"]

[dev-dependencies.rand]
version = "0.8.3"

[dev-dependencies.serde_test]
version = "1.0.130"

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]

[[test]]
name = "num_order"
required-features = ["num-order"]

[[bench]]
name = "benchmarks"
required-features = ["rand"]
harness = false
