[package]
name = "dashu-int"
version = "0.3.1"
authors = ["Jacob Zhong <cmpute@gmail.com>", "Tomek Czajka <tczajka@gmail.com>"]
edition = "2021"
description = "A big integer library with good performance"
keywords = ["mathematics", "numerics", "integer", "bigint", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu-int"
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "rand", "num-traits", "num-order"]
std = ["dashu-base/std"]

# unstable dependencies
rand = ["rand_v08"]
num-traits = ["num-traits_v02"]
num-integer = ["num-integer_v01"]

[dependencies]
dashu-base = { version = "0.3.1", default-features = false, path = "../base" }
cfg-if = { version = "1.0.0" }
static_assertions = { version = "1.1" }

# stable dependencies
num-order = { optional = true, version = "1.0.4", default-features = false }
serde = { optional = true, version = "1.0.130", default-features = false }
zeroize = { optional = true, version = "1.5.7", default-features = false }

# unstable dependencies
rand_v08 = { optional = true, version = "0.8.3", package = "rand", default-features = false }
num-traits_v02 = { optional = true, version = "0.2.14", package = "num-traits", default-features = false }
num-integer_v01 = { optional = true, version = "0.1.45", package = "num-integer", default-features = false }

[dev-dependencies]
rand_v08 = { version = "0.8.3", package = "rand" }
criterion = { version = "0.4.0", features = ["html_reports"] }
serde_test = { version = "1.0.130" }

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]

[[test]]
name = "num_order"
required-features = ["num-order"]

[[bench]]
name = "benchmarks"
required-features = ["rand"]
harness = false
