[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "dashu-rs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]