[package]
name = "dashu-ratio"
version = "0.3.0"
authors = ["Jacob Zhong <cmpute@gmail.com>"]
edition = "2021"
description = "A big rational library with good performance"
keywords = ["mathematics", "numerics", "rational", "bigrat", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu-ratio"
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "rand", "num-traits"]
std = ["dashu-base/std", "dashu-int/std"]
rand = ["dep:rand", "dashu-int/rand"]
serde = ["dep:serde", "dashu-int/serde"]
num-traits = ["dep:num-traits", "dashu-int/num-traits"]

[dependencies.dashu-base]
path = "../base"
version = "0.3.0"
default-features = false

[dependencies.dashu-int]
path = "../integer"
version = "0.3.0"
default-features = false

[dependencies.dashu-float]
optional = true
path = "../float"
version = "0.3.0"
default-features = false

[dependencies.num-traits]
optional = true
version = "0.2.14"
default-features = false

[dependencies.rand]
optional = true
version = "0.8.3"
default-features = false

[dependencies.serde]
optional = true
version = "1.0.130"
default-features = false

[dev-dependencies.criterion]
version = "0.4.0"
features = ["html_reports"]

[dev-dependencies.rand]
version = "0.8.3"

[dev-dependencies.postcard]
version = "1.0.2"
features = ["alloc"]

[dev-dependencies.serde_test]
version = "1.0.130"

[dev-dependencies.serde_json]
version = "1.0"

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]
