[package]
name = "dashu-ratio"
version = "0.3.0"
authors = ["Jacob Zhong <cmpute@gmail.com>"]
edition = "2021"
description = "A big rational library with good performance"
keywords = ["mathematics", "numerics", "rational", "bigrat", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu-ratio"
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "rand", "num-traits", "dashu-float"]
std = ["dashu-base/std", "dashu-int/std"]
rand = ["dep:rand", "dashu-int/rand"]
serde = ["dep:serde", "dashu-int/serde"]
num-traits = ["dep:num-traits", "dashu-int/num-traits"]
zeroize = ["dep:zeroize", "dashu-int/zeroize"]

[dependencies]
dashu-base = { version = "0.3.0", default-features = false, path = "../base" }
dashu-int = { version = "0.3.0", default-features = false, path = "../integer" }
dashu-float = { version = "0.3.0", default-features = false, optional = true, path = "../float" }

num-traits = { optional = true, version = "0.2.14", default-features = false }
rand = { optional = true, version = "0.8.3", default-features = false }
serde = { optional = true, version = "1.0.130", default-features = false }
zeroize = { optional = true, version = "1.5.7", default-features = false }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rand = { version = "0.8.3" }
postcard = { version = "1.0.2", features = ["alloc"] }
serde_test = { version = "1.0.130" }
serde_json = { version = "1.0" }

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]

[[test]]
name = "convert_fbig"
required-features = ["dashu-float"]
