[package]
name = "dashu-ratio"
version = "0.4.0"
authors = ["Jacob Zhong <cmpute@gmail.com>"]
edition = "2021"
description = "A big rational library with good performance"
keywords = ["mathematics", "numerics", "rational", "bigrat", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmpute/dashu"
homepage = "https://github.com/cmpute/dashu"
documentation = "https://docs.rs/dashu-ratio"
readme = "README.md"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "num-order", "dashu-float"]
std = ["dashu-base/std", "dashu-int/std"]

# stable dependencies
serde = ["dep:serde", "dashu-int/serde"]
zeroize = ["dep:zeroize", "dashu-int/zeroize"]
num-order = ["dep:num-order", "dep:_num-modular"]

# unstable dependencies
num-traits = ["num-traits_v02"]
num-traits_v02 = ["dep:num-traits_v02", "dashu-int/num-traits_v02"]
rand = ["rand_v08"]
rand_v08 = ["dep:rand_v08", "dashu-int/rand_v08"]

[dependencies]
dashu-base = { version = "0.4.0", default-features = false, path = "../base" }
dashu-int = { version = "0.4.0", default-features = false, path = "../integer" }
dashu-float = { version = "0.4.0", default-features = false, optional = true, path = "../float" }

# stable dependencies
num-order = { optional = true, version = "1.2.0", default-features = false }
serde = { optional = true, version = "1.0.130", default-features = false }
zeroize = { optional = true, version = "1.5.7", default-features = false }

# unstable dependencies
rand_v08 = { optional = true, version = "0.8.3", package = "rand", default-features = false }
num-traits_v02 = { optional = true, version = "0.2.15", package = "num-traits", default-features = false }
_num-modular = { optional = true, version = "0.6.1", package = "num-modular", default-features = false }

[dev-dependencies]
rand_v08 = { version = "0.8.3", package = "rand" }
postcard = { version = "1.0.2", features = ["alloc"] }
serde_test = { version = "1.0.130" }
serde_json = { version = "1.0" }

criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]

[[test]]
name = "dashu_float"
required-features = ["dashu-float"]

[[test]]
name = "cmp"
required-features = ["dashu-float"]

[[test]]
name = "num_order"
required-features = ["num-order", "dashu-float", "dashu-int/num-order"]

[[bench]]
name = "primitive"
required-features = ["rand"]
harness = false
